--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,13 +12,14 @@ source:
 build:
   number: 0
   skip: true  # [win and vc!=14]
+  msvc_compiler: 14.0 # [win]
   ignore_prefix_files:
     - bin/node
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}  # [unix]
+    - {{ compiler('cxx') }}  # [unix]
     - python >=2.7,<3
     - nasm  # [win]
 
