MNT: Re-rendered with conda-smithy 3.1.5.post.dev4 and pinning 2018.05.22

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,7 @@
 # file, make changes to conda-forge.yml and/or recipe/meta.yaml, and run
 # "conda smithy rerender".
 
+image: Visual Studio 2017
 environment:
 
   BINSTAR_TOKEN:
