--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,11 +16,14 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}  # [not win]
+    - {{ compiler('cxx') }}  # [not win]
     - python 2.7.*
     - nasm  # [win]
-  host: []
+  host:
+    - vs2015runtime  # [win]
+  run:
+    - vs2015runtime  # [win]
 
 test:
   commands:
