MNT: Re-rendered with conda-smithy 3.1.12 and pinning 2018.09.20

--- a/.ci_support/win_.yaml
+++ b/.ci_support/win_.yaml
@@ -1,7 +1,4 @@
-c_compiler:
-- vs2015
-cxx_compiler:
-- vs2015
-zip_keys:
-- - c_compiler
-  - cxx_compiler
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
