--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -72,6 +72,9 @@ jobs:
     - script: call run_conda_forge_build_setup
       displayName: conda-forge build setup
 
+    - script: conda.exe clean -tipsy
+      displayName: conda clean
+
     # Special cased version setting some more things!
     - script: |
         conda.exe build recipe -m .ci_support\%CONFIG%.yaml --quiet
