disable ltcg on Windows
we shouldn't really do this, but it seems necessary to complete in Appveyor's time limit

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
   sha256: c6552b95062f5e9f3a27da6fdb57914ab4b27a9aa2e783fb050791166554d059
   patches:
     - macosx-target.patch
+    - no-ltcg.patch
 
 build:
   number: 1000
