--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,11 @@
 version: 2
 
 jobs:
-  build_linux_c_compilergcccxx_compilergxx:
+  build_linux_:
     working_directory: ~/test
     machine: true
     environment:
-      - CONFIG: "linux_c_compilergcccxx_compilergxx"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilertoolchain_ccxx_compilertoolchain_cxx:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_c_compilertoolchain_ccxx_compilertoolchain_cxx"
+      - CONFIG: "linux_"
     steps:
       - checkout
       - run:
@@ -72,7 +55,6 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build_linux_c_compilergcccxx_compilergxx
-      - build_linux_c_compilertoolchain_ccxx_compilertoolchain_cxx
+      - build_linux_
       - build_osx_c_compilerclangcxx_compilerclangxx
       - build_osx_c_compilertoolchain_ccxx_compilertoolchain_cxx
