--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -12,7 +12,7 @@ jobs:
     matrix:
       win_:
         CONFIG: win_
-        CONDA_BLD_PATH: D:\\bld\\
+        CONDA_BLD_PATH: C:\\bld\\
         UPLOAD_PACKAGES: False
   steps:
     # TODO: Fast finish on azure pipelines?
