--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,8 @@ requirements:
     - {{ compiler('c') }}  # [not win]
     - {{ compiler('cxx') }}  # [not win]
     - python 2.7.*  # [not win]
+    - git # [linux]
+    - make # [linux]
   host:
     - vs2015_runtime  # [win]
   run:
