--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -3,3 +3,13 @@ c_compiler:
   - gcc  # [linux]
 cxx_compiler:
   - vs2015  # [win]
+MACOSX_DEPLOYMENT_TARGET:
+  - '10.10'  # [osx]
+macos_min_version:
+  - '10.10'  # [osx]
+
+pin_run_as_build:
+  # libuv is missing run_exports
+  libuv:
+    max_pin: x.x
+    min_pin: x.x.x
