--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
   host:
     - vs2015_runtime  # [win]
     - icu  # [not win]
-    - libuv  # [not win]
+    - libuv >=1.31  # [not win]
     - openssl  # [not win]
     - zlib  # [not win]
   run:
