--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -10,5 +10,5 @@ max_py_ver: '37'
 max_r_ver: '35'
 provider:
   linux_aarch64: default
-  linux_ppc64le: default
+  linux_ppc64le: azure
   win: default
