--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,14 +24,14 @@ requirements:
   build:
     - {{ compiler('c') }}  # [not win]
     - {{ compiler('cxx') }}  # [not win]
-    - python 2.7.*  # [not win]
+    - python 3.7  # [not win]
     - git  # [linux]
     - make  # [linux]
     - pkg-config  # [not win]
   host:
     - vs2015_runtime  # [win]
     - icu  # [not win]
-    - libuv >=1.32  # [not win]
+    - libuv >=1.33  # [not win]
     - openssl  # [not win]
     - zlib  # [not win]
   run:
