try specifying newer openssl

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,13 +32,13 @@ requirements:
     - vs2015_runtime  # [win]
     - icu  # [not win]
     - libuv >=1.33  # [not win]
-    - openssl  # [not win]
+    - openssl >= 1.1.1.d  # [not win]
     - zlib  # [not win]
   run:
     - vs2015_runtime  # [win]
     - icu  # [not win]
     - libuv  # [not win]
-    - openssl  # [not win]
+    - openssl >= 1.1.1d # [not win]
     - zlib  # [not win]
   run_constrained:  # [osx]
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx]
