--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - vs2015_runtime  # [win]
     - icu  # [not win]
     - libuv >=1.33  # [not win]
-    - openssl >=1.1.1.d   # [not win]
+    - openssl >=1.1.1d   # [not win]
     - zlib  # [not win]
   run:
     - vs2015_runtime  # [win]
