--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,8 @@ source:
 
 build:
   number: 1
-  ignore_prefix_files:
-    - bin/node
+  # Prefix replacement breaks in the binary embedded configurations.
+  detect_binary_files_with_prefix: False
 
 requirements:
   build:
@@ -50,6 +50,8 @@ test:
     - npm install -h
     - npm config get prefix -g
     - test $(echo "console.log(1 + 3)" | node) == 4  # [not win]
+    - test -f $PREFIX/lib/libnode.79.dylib  # [osx]
+    - test -f $PREFIX/lib/libnode.so.79  # [linux]
 
 about:
   home: https://nodejs.org/
