specify icu version requirement

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - pkg-config  # [not win]
   host:
     - vs2015_runtime  # [win]
-    - icu  # [not win]
+    - icu >=65  # [not win]
     - libuv >=1.33  # [not win]
     - openssl  >=1.1.1d  # [not win]
     - zlib  # [not win]
