--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "12.16.1" %}
+{% set version = "12.18.3" %}
 
 package:
   name: nodejs
@@ -7,9 +7,9 @@ package:
 source:
   fn: node-v{{ version }}.tar.gz
   url: https://nodejs.org/dist/v{{ version }}/node-v{{ version }}.tar.gz  # [not win]
-  sha256: 4fe8c3454f9bee5bbe72d44aa25cd931859b3037b7a9473081b3b2bd1b465b95  # [not win]
+  sha256: 6ea85f80e01b007cc9b566b8836513bc5102667d833bad4c1092be60fa60c2d4  # [not win]
   url: https://nodejs.org/dist/v{{ version }}/node-v{{ version }}-win-x64.zip  # [win]
-  sha256: b93b73572c5e495154a9823d494de5729c77d1c83b041171154c4b5f3f76b590  # [win]
+  sha256: 1fcd30c09f0ac9fbecf45161519eff2cf621c199eef4663b1db41b3f2fef4041  # [win]
   patches:
     - linux-librt.patch  # [not win]
     - cinttypes.patch  # [linux]
@@ -62,3 +62,4 @@ extra:
     - minrk
     - msarahan
     - pelson
+    - roccqqck
