--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -15,7 +15,7 @@ docker_image:
 icu:
 - '64.2'
 openssl:
-- 1.1.1a
+- 1.1.1
 pin_run_as_build:
   icu:
     max_pin: x
@@ -23,5 +23,7 @@ pin_run_as_build:
     max_pin: x.x.x
   zlib:
     max_pin: x.x
+target_platform:
+- linux-64
 zlib:
 - '1.2'
