--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -3,7 +3,7 @@ MACOSX_DEPLOYMENT_TARGET:
 c_compiler:
 - clang
 c_compiler_version:
-- '4'
+- '10'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -11,7 +11,7 @@ channel_targets:
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '4'
+- '10'
 icu:
 - '64.2'
 macos_machine:
@@ -19,7 +19,7 @@ macos_machine:
 macos_min_version:
 - '10.10'
 openssl:
-- 1.1.1a
+- 1.1.1
 pin_run_as_build:
   icu:
     max_pin: x
@@ -27,5 +27,7 @@ pin_run_as_build:
     max_pin: x.x.x
   zlib:
     max_pin: x.x
+target_platform:
+- osx-64
 zlib:
 - '1.2'
