--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
     - cinttypes.patch  # [linux]
 
 build:
-  number: 0
+  number: 1
   ignore_prefix_files:
     - bin/node
 
@@ -63,3 +63,4 @@ extra:
     - msarahan
     - pelson
     - roccqqck
+    - xhochy
