Switch ppc64le to emulation

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,10 +1,7 @@
 appveyor:
   image: Visual Studio 2017
-compiler_stack: comp7
-max_py_ver: '37'
-max_r_ver: '35'
 provider:
   linux_aarch64: default
-  linux_ppc64le: default
+  linux_ppc64le: azure
   win: default
 conda_forge_output_validation: true
