--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -5,3 +5,7 @@ provider:
   linux_ppc64le: default
   win: default
 conda_forge_output_validation: true
+bot:
+  abi_migration_branches:
+    - "12.x"
+    - "14.x"
