MNT: Re-rendered with conda-build 3.20.5, conda-smithy 3.8.5, and conda-forge-pinning 2020.11.13.21.19.21

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,6 +2,6 @@ appveyor:
   image: Visual Studio 2017
 provider:
   linux_aarch64: default
-  linux_ppc64le: azure
+  linux_ppc64le: default
   win: default
 conda_forge_output_validation: true
