--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -8,6 +8,8 @@ MACOSX_DEPLOYMENT_TARGET:
 macos_min_version:
   - '10.11'  # [osx]
 
+cudnn:                                    # [linux64]
+  - undefined                             # [linux64]
 cuda_compiler_version:                    # [linux64]
   - None                                  # [linux64]
 docker_image:                             # [linux64]
