--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,10 +1,11 @@
-appveyor:
-  image: Visual Studio 2017
+build_platform:
+  osx_arm64: osx_64
 provider:
   linux_aarch64: default
   linux_ppc64le: default
   win: default
 conda_forge_output_validation: true
+test_on_native_only: true
 bot:
   abi_migration_branches:
     - "12.x"
