use global pins

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,9 +31,9 @@ requirements:
     - ninja  # [not win]
     - pkg-config  # [not win]
   host:
-    - icu >=65  # [not win]
-    - libuv >=1.33  # [not win]
-    - openssl  >=1.1.1d  # [not win]
+    - icu  # [not win]
+    - libuv  # [not win]
+    - openssl  # [not win]
     - zlib  # [not win]
   run:
     - icu  # [not win]
