--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ source:
   patches:
     - linux-librt.patch  # [not win]
     - cinttypes.patch  # [linux]
+    - less-shared-intermediate.patch  # [osx and arm64]
 
 build:
   number: 1
