--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,10 @@
-appveyor: {image: Visual Studio 2017}
+provider:
+  linux_aarch64: default
+  linux_ppc64le: default
+  win: default
 conda_forge_output_validation: true
-provider: {linux_aarch64: default, linux_ppc64le: default, win: default}
+test_on_native_only: true
+bot:
+  abi_migration_branches:
+    - "12.x"
+    - "14.x"
