--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,12 +1,11 @@
-c_compiler:
-  - vs2015  # [win]
-  - gcc  # [linux]
-cxx_compiler:
-  - vs2015  # [win]
 MACOSX_DEPLOYMENT_TARGET:
   - '10.11'  # [osx]
 macos_min_version:
   - '10.11'  # [osx]
+c_compiler_version:                       # [ppc64le]
+  - '8'                                   # [ppc64le]
+cxx_compiler_version:                     # [ppc64le]
+  - '8'                                   # [ppc64le]
 
 pin_run_as_build:
   # libuv is missing run_exports
