--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -3,6 +3,11 @@ MACOSX_DEPLOYMENT_TARGET:  # [osx and x86_64]
 macos_min_version:         # [osx and x86_64]
   - '10.14'                # [osx and x86_64]
 
+c_compiler_version:                       # [ppc64le]
+  - '8'                                   # [ppc64le]
+cxx_compiler_version:                     # [ppc64le]
+  - '8'                                   # [ppc64le]
+
 pin_run_as_build:
   # libuv is missing run_exports
   libuv:
