--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,7 @@
 build_platform:
   osx_arm64: osx_64
   linux_ppc64le: linux_64
+  linux_aarch64: linux_64
 provider:
   linux_aarch64: default
   linux_ppc64le: default
