bug cross-compiling v8 linux x64->aarch64

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ source:
     - 0001-Force-include-handler-outside-simulator.patch  # [osx and arm64]
     - test-dep-shared-openssl.patch  # [not win]
     - ppc-issignaling.patch  # [ppc64le]
+    - aarch64-trap-handler.patch  # [linux and aarch64]
 
 build:
   number: 0
