--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,6 @@
 provider:
-  linux_aarch64: default
-  linux_ppc64le: default
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
   win: default
 conda_forge_output_validation: true
 test_on_native_only: true
