--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,9 +1,10 @@
 provider:
-  linux_aarch64: linux_64
-  linux_ppc64le: linux_64
   win: default
 conda_forge_output_validation: true
 test_on_native_only: true
+build_platform:
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
 bot:
   abi_migration_branches:
     - "12.x"
