--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,15 +9,14 @@ package:
 
 source:
   url: https://nodejs.org/dist/v{{ version }}/node-v{{ version }}.tar.gz  # [not win]
-  sha256: 1fce1ac96d52cb5432640b416d8b58d0930ae336b2e2c78aad76f01d0cabfc92  # [not win]
+  sha256: 19d354d17434ed257863a76a511e9af37f6ae4b318974fb9d9275f019e37de78  # [not win]
   url: https://nodejs.org/dist/v{{ version }}/node-v{{ version }}-win-x64.zip  # [win]
   sha256: de8d90d82af888efa0e7942204539d2fca731013a2d715da954db410df58be8f  # [win]
   patches:
     - linux-librt.patch  # [not win]
     - cinttypes.patch  # [linux]
-    - less-shared-intermediate.patch  # [build_platform != target_platform]
+    - less-shared-intermediate.patch
     - 0001-Forward-ceilf-floorf.patch  # [not win]
-    - 0001-Force-include-handler-outside-simulator.patch  # [osx and arm64]
     - test-dep-shared-openssl.patch  # [not win]
     - ppc-issignaling.patch  # [ppc64le]
     - aarch64-trap-handler.patch  # [linux and aarch64]
