--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,6 +2,7 @@ bot:
   abi_migration_branches:
   - 16.x
   - 14.x
+  automerge: true
 build_platform:
   linux_aarch64: linux_64
   # linux_ppc64le: linux_64
