Add debugging script

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ source:
 
 build:
   number: 0
+  skip: true  # [not ppc64le]
   # Prefix replacement breaks in the binary embedded configurations.
   detect_binary_files_with_prefix: false
   run_exports:
@@ -57,8 +58,10 @@ requirements:
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
 
 test:
+  files:
+    - seg_wrapper.sh
   commands:
-    - node -h
+    - ./seg_wrapper.sh node -h
     - node -v
     - npm version
     - npm install -h
