--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -1,7 +1,7 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '8'
+- '11'
 cdt_name:
 - cos7
 channel_sources:
@@ -11,18 +11,15 @@ channel_targets:
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '8'
+- '11'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- condaforge/linux-anvil-cos7-x86_64
 icu:
 - '70'
 openssl:
 - '3'
-pin_run_as_build:
-  zlib:
-    max_pin: x.x
 target_platform:
-- linux-ppc64le
+- linux-64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
