--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -1,28 +1,25 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '14'
+- '8'
+cdt_name:
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '14'
+- '8'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 icu:
 - '70'
-macos_machine:
-- arm64-apple-darwin20.0.0
 openssl:
 - '3'
-pin_run_as_build:
-  zlib:
-    max_pin: x.x
 target_platform:
-- osx-arm64
+- linux-ppc64le
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
