--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -1,5 +1,5 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '10.14'
+- '11.0'
 c_compiler:
 - clang
 c_compiler_version:
@@ -15,16 +15,11 @@ cxx_compiler_version:
 icu:
 - '70'
 macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.14'
+- arm64-apple-darwin20.0.0
 openssl:
-- 1.1.1
-pin_run_as_build:
-  zlib:
-    max_pin: x.x
+- '3'
 target_platform:
-- osx-64
+- osx-arm64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
