--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ source:
     - 0004-Forward-ceilf-floorf.patch  # [not win]
     - 0005-Force-include-handler-outside-simulator.patch  # [osx and arm64]
     - 0006-trap-handler-doesn-t-work-on-linux-cross-compile-to-.patch  # [linux and aarch64]
+    - 0007-Remove-usage-of-msign-return-address-all.patch  # [linux and aarch64]
 
 build:
   number: 0
