--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -16,6 +16,9 @@ c_compiler_version:                       # [ppc64le]
 cxx_compiler_version:                     # [ppc64le]
   - '8'                                   # [ppc64le]
 
+icu:
+  - "72"
+
 pin_run_as_build:
   # libuv is missing run_exports
   libuv:
