--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,10 +37,13 @@ requirements:
     - ninja  # [not win]
     - pkg-config  # [not win]
 
+    # libuv is a bootstrap dependency in js2c
+    # starting with 20.3 (https://github.com/nodejs/node/pull/46997)
+    - libuv
+
     # need host builds of several lib dependencies
     # when cross-compiling
     - icu  # [build_platform != target_platform]
-    - libuv  # [build_platform != target_platform]
     - openssl  # [build_platform != target_platform]
     - zlib  # [build_platform != target_platform]
   host:
