Pin to clang=15 on osx

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -2,6 +2,10 @@ MACOSX_DEPLOYMENT_TARGET:  # [osx and x86_64]
   - '10.15'                # [osx and x86_64]
 macos_min_version:         # [osx and x86_64]
   - '10.15'                # [osx and x86_64]
+c_compiler_version:        # [osx]
+  - '15'                   # [osx]
+cxx_compiler_version:      # [osx]
+  - '15'                   # [osx]
 
 cudnn:                                    # [linux64]
   - undefined                             # [linux64]
