--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,7 +1,6 @@
-MACOSX_DEPLOYMENT_TARGET:  # [osx and x86_64]
-  - '10.15'                # [osx and x86_64]
-macos_min_version:         # [osx and x86_64]
-  - '10.15'                # [osx and x86_64]
+c_stdlib_version:  # [linux64 or (osx and x86_64)]
+  - '2.17'         # [linux64]
+  - '10.15'        # [osx and x86_64]
 c_compiler_version:        # [osx]
   - '15'                   # [osx]
 cxx_compiler_version:      # [osx]
