--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,13 +1,11 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.15'
+MACOSX_SDK_VERSION:
+- '10.15'
 c_compiler:
 - clang
 c_compiler_version:
 - '16'
-c_stdlib:
-- macosx_deployment_target
-c_stdlib_version:
-- '10.15'
 channel_sources:
 - conda-forge
 channel_targets:
@@ -30,4 +28,4 @@ zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
 zlib:
-- '1.2'
+- '1'
