--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,21 +1,6 @@
-MACOSX_DEPLOYMENT_TARGET:  # [osx and x86_64]
-  - '10.15'                # [osx and x86_64]
-macos_min_version:         # [osx and x86_64]
-  - '10.15'                # [osx and x86_64]
-
-cudnn:                                    # [linux64]
-  - undefined                             # [linux64]
-cuda_compiler_version:                    # [linux64]
-  - None                                  # [linux64]
-docker_image:                             # [linux64]
-  - condaforge/linux-anvil-cos7-x86_64    # [linux64]
-cdt_name:                                 # [linux64]
-  - cos7                                  # [linux64]
-c_compiler_version:                       # [ppc64le]
-  - '8'                                   # [ppc64le]
-cxx_compiler_version:                     # [ppc64le]
-  - '8'                                   # [ppc64le]
-
+c_stdlib_version:  # [(osx and x86_64) or linux64]
+  - '10.15'        # [osx and x86_64]
+  - '2.17'         # [linux64]
 pin_run_as_build:
   # libuv is missing run_exports
   libuv:
