--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,9 +27,9 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}  # [not win]
+    - {{ stdlib('c') }}      # [not win]
+    - {{ compiler('c') }}    # [not win]
     - {{ compiler('cxx') }}  # [not win]
-    - sysroot_linux-64 2.17  # [linux64]
     - python 3.8  # [not win]
     - git  # [linux]
     - ninja  # [not win]
