MNT: Re-rendered with conda-build 24.5.1, conda-smithy 3.36.2, and conda-forge-pinning 2024.06.15.21.41.23

--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -6,6 +6,10 @@ c_compiler:
 - clang
 c_compiler_version:
 - '16'
+c_stdlib:
+- macosx_deployment_target
+c_stdlib_version:
+- '10.15'
 channel_sources:
 - conda-forge
 channel_targets:
@@ -18,8 +22,6 @@ icu:
 - '73'
 macos_machine:
 - x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.15'
 openssl:
 - '3'
 target_platform:
