--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -22,6 +22,8 @@ cxx_compiler_version:
 - '12'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
+github_actions_labels:
+- cirun-openstack-cpu-large
 icu:
 - '73'
 openssl:
