--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -18,6 +18,8 @@ cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '16'
+github_actions_labels:
+- cirun-openstack-cpu-large
 icu:
 - '73'
 macos_machine:
