--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -2,5 +2,7 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+github_actions_labels:
+- cirun-openstack-cpu-large
 target_platform:
 - win-64
