--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,5 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.15'
+MACOSX_SDK_VERSION:
+- '10.15'
 c_compiler:
 - clang
 c_compiler_version:
@@ -28,4 +30,4 @@ zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
 zlib:
-- '1.2'
+- '1'
