MNT: Re-rendered with conda-build 24.7.1, conda-smithy 3.38.0, and conda-forge-pinning 2024.08.12.01.52.10

--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -5,7 +5,11 @@ MACOSX_SDK_VERSION:
 c_compiler:
 - clang
 c_compiler_version:
-- '15'
+- '16'
+c_stdlib:
+- macosx_deployment_target
+c_stdlib_version:
+- '10.14'
 channel_sources:
 - conda-forge
 channel_targets:
@@ -13,13 +17,11 @@ channel_targets:
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '15'
+- '16'
 icu:
 - '75'
 macos_machine:
 - x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.14'
 openssl:
 - '3'
 target_platform:
