--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,5 +1,9 @@
-c_stdlib_version:  # [osx and x86_64]
-  - '10.14'        # [osx and x86_64]
+c_stdlib_version:      # [osx and x86_64]
+  - '10.14'            # [osx and x86_64]
+c_compiler_version:    # [osx]
+  - '15'               # [osx]
+cxx_compiler_version:  # [osx]
+  - '15'               # [osx]
 
 cudnn:                                    # [linux64]
   - undefined                             # [linux64]
