--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,5 +1,7 @@
-c_stdlib_version:  # [(osx and x86_64) or linux64]
-  - '10.15'        # [osx and x86_64]
-  - '2.17'         # [linux64]
+c_stdlib_version:                                   # [(osx and x86_64) or linux]
+  - '10.15'                                         # [osx and x86_64]
+  - "2.28"                                          # [linux]
+docker_image:                                       # [linux]
+  - quay.io/condaforge/linux-anvil-alma-x86_64:8    # [linux]
 github_actions_labels:
 - cirun-openstack-cpu-large
