--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,11 +44,13 @@ requirements:
     - libuv  # [build_platform != target_platform]
     - openssl  # [build_platform != target_platform]
     - zlib  # [build_platform != target_platform]
+    - libcxx-devel  # [osx]
   host:
     - icu  # [not win]
     - libuv  # [not win]
     - openssl  # [not win]
     - zlib  # [not win]
+    - libcxx-devel  # [osx]
   run:
     - icu  # [not win]
     - libuv  # [not win]
