--- a/.ci_support/linux_aarch64_nodejs20.yaml
+++ b/.ci_support/linux_aarch64_nodejs20.yaml
@@ -7,7 +7,7 @@ c_stdlib:
 c_stdlib_version:
 - '2.17'
 cdt_name:
-- cos7
+- conda
 channel_sources:
 - conda-forge
 channel_targets:
@@ -17,13 +17,15 @@ cxx_compiler:
 cxx_compiler_version:
 - '13'
 docker_image:
-- condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 icu:
 - '75'
+nodejs:
+- '20'
 openssl:
 - '3'
 target_platform:
-- linux-64
+- linux-aarch64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
