--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -5,14 +5,20 @@
 jobs:
 - job: osx
   pool:
-    vmImage: macOS-12
+    vmImage: macOS-13
   strategy:
     matrix:
-      osx_64_:
-        CONFIG: osx_64_
+      osx_64_nodejs20:
+        CONFIG: osx_64_nodejs20
         UPLOAD_PACKAGES: 'True'
-      osx_arm64_:
-        CONFIG: osx_arm64_
+      osx_64_nodejs22:
+        CONFIG: osx_64_nodejs22
+        UPLOAD_PACKAGES: 'True'
+      osx_arm64_nodejs20:
+        CONFIG: osx_arm64_nodejs20
+        UPLOAD_PACKAGES: 'True'
+      osx_arm64_nodejs22:
+        CONFIG: osx_arm64_nodejs22
         UPLOAD_PACKAGES: 'True'
   timeoutInMinutes: 360
   variables: {}
