--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,8 +11,10 @@ source:
   # checksums from https://nodejs.org/dist/vX.Y.Z/SHASUMS256.txt.asc
   url: https://nodejs.org/dist/v{{ version }}/node-v{{ version }}.tar.gz  # [unix]
   sha256: 38e15a1d0dd0e95c237bc4651d7c9930a78d3fe7954a7ee7693b403f2d879e46  # [unix]
-  url: https://nodejs.org/dist/v{{ version }}/node-v{{ version }}-win-x64.zip  # [win]
-  sha256: b0feb09ebf41328628e7383f7a092fb7342ce1e05c867a90cf8f1379205a8429  # [win]
+  url: https://nodejs.org/dist/v{{ version }}/node-v{{ version }}-win-x64.zip  # [target_platform == "win-64"]
+  sha256: b0feb09ebf41328628e7383f7a092fb7342ce1e05c867a90cf8f1379205a8429  # [target_platform == "win-64"]
+  url: https://nodejs.org/dist/v{{ version }}/node-v{{ version }}-win-arm64.zip  # [target_platform == "win-arm64"]
+  sha256: 8ca2c90ae0373d69e13301293306c31ea9afca2780b8325b6ca059319479e560  # [target_platform == "win-arm64"]
   patches:
     - patches/0001-stop-removing-librt.patch  # [not win]
     - patches/0002-include-obj-name-in-shared-intermediate.patch  # [not win]
