Use newer macOS SDK for osx-64

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -3,6 +3,8 @@ c_stdlib_version:                                   # [(osx and x86_64) or linux
   - "2.28"                                          # [linux]
 github_actions_labels:
 - cirun-openstack-cpu-large
+MACOSX_SDK_VERSION:  # [osx and x86_64]
+  - "11.0"           # [osx and x86_64]
 
 # void creating spurious jobs due to multiple global pins for the package we're building here
 nodejs:
