MNT: Re-rendered with conda-build 25.5.0, conda-smithy 3.51.0, and conda-forge-pinning 2025.07.10.06.40.00

--- a/.ci_support/win_arm64_.yaml
+++ b/.ci_support/win_arm64_.yaml
@@ -1,10 +1,14 @@
+c_compiler:
+- vs2022
+c_stdlib:
+- vs
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- vs2022
 github_actions_labels:
 - cirun-openstack-cpu-large
-nodejs:
-- '*'
 target_platform:
 - win-arm64
